# autotools

./: README.md
templates/recursive_output_directory/: Makefile  Makefile.am  config.h  config.status  configure  configure.ac  libtool
templates/recursive_output_directory/autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
templates/recursive_output_directory/libCube/: Makefile  Makefile.am  __OUTPUT_DIR__libCube_la-cube.lo
templates/recursive_output_directory/libCube/.deps/: __OUTPUT_DIR__libCube_la-cube.Plo  libCube_la-cube.Plo
templates/recursive_output_directory/libCube/include/: cube.hpp
templates/recursive_output_directory/libCube/src/: cube.cpp
templates/recursive_output_directory/output/: libCube.la  testCube
templates/recursive_output_directory/output/.libs/: libCube.la  libCube.lai  libCube.so.0  libCube.so.0.0.0  lt-testCube  testCube
templates/recursive_output_directory/testCube/: Makefile  Makefile.am
templates/recursive_output_directory/testCube/.deps/: __OUTPUT_DIR__testCube-testCube.Po  testCube-testCube.Po
templates/recursive_output_directory/testCube/src/: testCube.cpp
